sass: Fix comment overflow in modal view
Adjust max height of modal and overflow of post comments
to provided smoother scrolling for comment overflows.

--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -15,6 +15,10 @@
         display: flex;
         align-items: center;
         justify-content: center;
+
+        & .post-container {
+            max-height: 90vh;
+        }
     }
 
     span.close-button {
